# ai_paper_downloader

./: .coverage  .gitignore  AGENTS.md  README.md  download_papers.py  pyproject.toml  requirements.txt
ai_paper_downloader/: command_args.py  generate_safe_filename.py  main_entry.py
ai_paper_downloader/parser/: aaai.py  dmlr.py  iclr.py  icml.py  ijcai.py  jair.py  jmlr.py  neurips.py  tmlr.py
static_html/AAAI/: 2025-track1.html  2025-track10.html  2025-track11.html  2025-track12.html  2025-track13.html  2025-track14.html  2025-track15.html  2025-track16.html  2025-track17.html  2025-track18.html  2025-track19.html  2025-track2.html  2025-track20.html  2025-track21.html  2025-track22.html  2025-track23.html  2025-track24.html  2025-track25.html  2025-track3.html  2025-track4.html  2025-track5.html  2025-track6.html  2025-track7.html  2025-track8.html  2025-track9.html  2026-track1.html  2026-track10.html  2026-track11.html  2026-track12.html  2026-track13.html  2026-track14.html  2026-track15.html  2026-track16.html  2026-track17.html  2026-track18.html  2026-track19.html  2026-track2.html  2026-track20.html  2026-track21.html  2026-track22.html  (+29 more)
static_html/DMLR/: 1.html  2.html  download.sh
static_html/ICLR/: 2024.html  2025.html  download.sh
tests/: test_command_args.py  test_download_papers_script.py  test_generate_safe_filename.py  test_main_entry.py  test_parser_aaai.py  test_parser_dmlr.py  test_parser_iclr.py  test_parser_icml.py  test_parser_ijcai.py  test_parser_jair.py  test_parser_jmlr.py  test_parser_neurips.py  test_parser_tmlr.py
(+60 files in other folders)
