[project]
name = "ai-paper-downloader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "openreview-py>=1.56.1",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
]

[dependency-groups]
test = [
    "black>=26.1.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]
